refactor: move structure (children) and data (examples) from SpecProperty to SpecType